# websec-2

./: pyproject.toml
.docker/: .env  DockerfileBackend  docker-compose.yaml
backend/: main.py
backend/src/connections/redis/: connection.py
backend/src/schedule/: config.py  depends.py  gateway.py  repository.py  router.py  service.py
backend/src/schemas/: day.py  lesson.py  week.py
frontend/: depends.py  main.py  router.py
frontend/connections/backend/: config.py  connection.py
frontend/templates/: index.html  schedule_table.html
src/: main.py
src/connections/redis/: config.py  connection.py
src/schedule/: depends.py  gateway.py  repository.py  router.py  service.py
src/schemas/: day.py  lesson.py  week.py
